edition = "2023";

package auth;

import "google/protobuf/timestamp.proto";

message Store {
  map<string, TokenInfo> sessions = 1;
  map<int64, UserInfo> users = 2;
}

message TokenInfo {
  string sessionID = 1;
  google.protobuf.Timestamp created = 2;
  int64 userID = 3;
  bytes sessionData = 4;
  string credname =5;
}

message UserInfo {
  reserved 3;
  int64 userID = 1;
  string username = 2;
  repeated Credential creds = 4;
}

message Credential {
  string name = 1;
  bytes cred = 2;
}
